--- a/imgui.ini
+++ b/imgui.ini
@@ -1,27 +1,37 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=1280,701
+Pos=0,0
+Size=1480,1065
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=696,116
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=628,19
-Size=652,701
+ViewportPos=1474,424
+ViewportId=0xA4D966FE
+Size=448,766
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Node Editor]
-Pos=0,19
-Size=626,701
+ViewportPos=1474,424
+ViewportId=0xA4D966FE
+Pos=450,0
+Size=455,766
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000004,0
+
+[Window][Stacked 1]
+ViewportPos=1338,643
+ViewportId=0x4FF3CADB
+Size=409,172
+Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=626,701 Selected=0xAE98FAB7
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=652,701 CentralNode=1 Selected=0xE87781F4
+DockNode    ID=0x00000001 Pos=1474,424 Size=905,766 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=285,766 Selected=0xE87781F4
+  DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=289,766 Selected=0xAE98FAB7
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,135 Size=1480,1065 CentralNode=1
 
