--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=833,283
+ViewportPos=1049,522
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -33,5 +34,5 @@ Collapsed=0
 DockNode    ID=0x00000001 Pos=1309,450 Size=905,766 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=285,766 Selected=0xE87781F4
   DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=289,766 Selected=0xAE98FAB7
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=194,278 Size=1280,720 CentralNode=1
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=1055,376 Size=1280,720 CentralNode=1
 
