--- a/imgui.ini
+++ b/imgui.ini
@@ -9,16 +9,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Node Editor]
-Pos=60,60
+ViewportPos=140,958
+ViewportId=0xE3F3CE3C
 Size=512,299
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1559,371
+ViewportPos=2067,422
 ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=53,91 Size=1280,720 CentralNode=1
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=498,196 Size=1280,720 CentralNode=1
 
