--- a/Aero.vcxproj.filters
+++ b/Aero.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClCompile Include="src\Renderer\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Renderer\Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Renderer\Scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Core\Application.h">
@@ -212,9 +218,17 @@
     <ClInclude Include="src\Renderer\Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Renderer\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Renderer\Shaders\constant.frag" />
     <None Include="src\Renderer\Shaders\constant.vert" />
+    <None Include="src\Renderer\Shaders\diffuse.vert" />
+    <None Include="src\Renderer\Shaders\diffuse.frag" />
   </ItemGroup>
 </Project>
